Done with MVP and tablet CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     <a class="animate" href="#">About</a>
                     <a class="animate" href="#">Contact</a>
                 </div>
-                <img src="img/logo.png" alt="Great Idea logo">
+                <div id="header-img-div">
+                  <img src="img/logo.png" alt="Great Idea logo">
+                </div>
             </nav>
             <div id="header-title">
                 <div id="title">
